--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,101 @@
+@font-face {
+    font-family: roboto;
+    src: url(./fonts/Roboto-VariableFont_wdth\,wght.ttf);
+}
+
+
 *{
+    --egg: #fcfaf8;
+    --light-black: #202020;
+    --dark-blue: rgb(74, 102, 226);
+    --blue: rgb(159, 157, 186);
+    --light-gary:rgb(218, 215, 215);
+    --padding-sidebar: 60px 60px;
+    --padding-button:10px 10px;
+    --min-gap: 7px;
+    --max-gap: 35px;
+    --inline-gap: 0.5rem;
+    
+    
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-html{
-    background-color: aqua;
+html, body{
+    height: 100%;
+}
+
+.all{
+    display: grid;
+    grid-template: 1fr / clamp(200px, 25%, 400px)  1fr;
+    min-height: 100%;
+}
+
+.sidebar{
+    background-color: var(--egg);
+    color: var(--light-black);
+
+    display: flex;
+    flex-direction: column;
+    font-family: roboto;
+    gap: var(--max-gap);
+    padding: var(--padding-sidebar);
+    font-size: 1rem;
+    
+}
+
+.user a{
+    text-decoration: none;
+    color: inherit;
+    display: flex;
+    align-items: center;
+    gap: var(--inline-gap);
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: var(--blue);
+}
+
+.sidebar button{
+    border: none;
+    background-color: inherit;
+    font-size: inherit;
+    display: flex;
+    align-items: center;
+    gap: var(--inline-gap);
+    cursor: pointer;
+    padding: var(--padding-button);
+    border-radius: 10px;
+    margin: 0px;
+}
+
+.tag button:not(:first-child):hover{
+    background-color: var(--light-gary);
+}
+
+.projects button:nth-child(n + 3):hover{
+    background-color: var(--light-gary);
+}
+
+.add{
+    color: var(--dark-blue);
+    font-weight: 700;
+}
+
+.size-3{
+    height: 1.5rem;
+    width: 1.5rem;
+}
+
+.tag{
+    display: flex;
+    flex-direction: column;
+    gap: var(--min-gap);
+}
+
+
+.projects{
+    display: flex;
+    flex-direction: column;
+    gap: var(--min-gap);
 }
