--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: roboto;
-    src: url(./fonts/Roboto-VariableFont_wdth\,wght.ttf);
+    src: url(./fonts/Roboto-VariableFont_wdth,wght.ttf);
 }
 
 
